@@ -23,11 +23,12 @@ import org.springframework.context.ApplicationContext;
 import org.springframework.core.io.Resource;
 import org.springframework.core.io.support.EncodedResource;
 import org.springframework.dao.DataAccessException;
+import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.jdbc.core.simple.SimpleJdbcTemplate;
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.TestExecutionListeners;
 import org.springframework.test.context.transaction.TransactionalTestExecutionListener;
-import org.springframework.test.jdbc.SimpleJdbcTestUtils;
+import org.springframework.test.jdbc.JdbcTestUtils;
 import org.springframework.transaction.PlatformTransactionManager;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -38,7 +39,7 @@ import org.springframework.transaction.annotation.Transactional;
  * {@link PlatformTransactionManager} bean to be defined in the Spring
  * {@link ApplicationContext application context}.
  *
- * <p>This class exposes a {@link SimpleJdbcTemplate} and provides an easy way
+ * <p>This class exposes a {@link JdbcTemplate} and provides an easy way
  * to {@link #countRowsInTable(String) count the number of rows in a table},
  * {@link #deleteFromTables(String...) delete from tables}, and
  * {@link #executeSqlScript(String, boolean) execute SQL scripts} within a
@@ -68,7 +69,7 @@ import org.springframework.transaction.annotation.Transactional;
  * @see org.springframework.test.annotation.Rollback
  * @see org.springframework.test.context.transaction.BeforeTransaction
  * @see org.springframework.test.context.transaction.AfterTransaction
- * @see org.springframework.test.jdbc.SimpleJdbcTestUtils
+ * @see org.springframework.test.jdbc.JdbcTestUtils
  * @see org.springframework.test.context.testng.AbstractTransactionalTestNGSpringContextTests
  */
 @TestExecutionListeners(TransactionalTestExecutionListener.class)
@@ -77,19 +78,29 @@ import org.springframework.transaction.annotation.Transactional;
 public abstract class AbstractTransactionalJUnit4SpringContextTests extends AbstractJUnit4SpringContextTests {
 
 	/**
-	 * The SimpleJdbcTemplate that this base class manages, available to subclasses.
+	 * The {@code SimpleJdbcTemplate} that this base class manages, available to subclasses.
+	 * @deprecated As of Spring 3.2, use {@link #jdbcTemplate} instead.
 	 */
+	@Deprecated
 	protected SimpleJdbcTemplate simpleJdbcTemplate;
+
+	/**
+	 * The {@code JdbcTemplate} that this base class manages, available to subclasses.
+	 */
+	protected JdbcTemplate jdbcTemplate;
 
 	private String sqlScriptEncoding;
 
 
 	/**
-	 * Set the DataSource, typically provided via Dependency Injection.
+	 * Set the {@code DataSource}, typically provided via Dependency Injection.
+	 * <p>This method also instantiates the {@link #simpleJdbcTemplate} and
+	 * {@link #jdbcTemplate} instance variables.
 	 */
 	@Autowired
 	public void setDataSource(DataSource dataSource) {
 		this.simpleJdbcTemplate = new SimpleJdbcTemplate(dataSource);
+		this.jdbcTemplate = new JdbcTemplate(dataSource);
 	}
 
 	/**
@@ -106,7 +117,7 @@ public abstract class AbstractTransactionalJUnit4SpringContextTests extends Abst
 	 * @return the number of rows in the table
 	 */
 	protected int countRowsInTable(String tableName) {
-		return SimpleJdbcTestUtils.countRowsInTable(this.simpleJdbcTemplate, tableName);
+		return JdbcTestUtils.countRowsInTable(this.jdbcTemplate, tableName);
 	}
 
 	/**
@@ -116,7 +127,7 @@ public abstract class AbstractTransactionalJUnit4SpringContextTests extends Abst
 	 * @return the total number of rows deleted from all specified tables
 	 */
 	protected int deleteFromTables(String... names) {
-		return SimpleJdbcTestUtils.deleteFromTables(this.simpleJdbcTemplate, names);
+		return JdbcTestUtils.deleteFromTables(this.jdbcTemplate, names);
 	}
 
 	/**
@@ -132,7 +143,7 @@ public abstract class AbstractTransactionalJUnit4SpringContextTests extends Abst
 	 */
 	protected void executeSqlScript(String sqlResourcePath, boolean continueOnError) throws DataAccessException {
 		Resource resource = this.applicationContext.getResource(sqlResourcePath);
-		SimpleJdbcTestUtils.executeSqlScript(this.simpleJdbcTemplate, new EncodedResource(resource,
+		JdbcTestUtils.executeSqlScript(this.jdbcTemplate, new EncodedResource(resource,
 			this.sqlScriptEncoding), continueOnError);
 	}
 
